# GlossoGen

./: .dockerignore  .env.example  .gitignore  Architecture.md  CLAUDE.md  Dockerfile  ExampleScenario.md  LICENSE  Makefile  README.md  ToolComparison.md  alembic.ini  docker-compose.langfuse.yml  pyproject.toml  railway.toml  vulture_whitelist.py
.github/workflows/: lint.yml
analysis/: README.md  cross_run_swap_order_asymmetry.md  export_baseline_round_success.py  plot_baseline_budget_sweep.py  plot_language_emergence.py  plot_language_features.py  plot_multiswap_rc40_phases.py  plot_round_success_with_mcm.py  simon.ipynb
analysis/baseline_round_success/: README.md  export_baseline_round_success.py
analysis/channel_noise_export/: README.md  __init__.py  export_channel_noise.py
analysis/exports/: baseline_round_success.xlsx  baseline_round_success_budget_aggregate.csv  baseline_round_success_round_level.csv  baseline_round_success_run_level.csv
analysis/judge_validation_set/: README.md  build_judge_validation_set.py  judge_validation_set.csv
analysis/plots/: README.md  plot_baseline_budget_sweep.py  plot_language_emergence.py  plot_language_features.py  plot_multiswap_rc40_phases.py  plot_round_success_with_mcm.py
analysis/protocol_learnability_export/: README.md  __init__.py  export_protocol_learnability.py
analysis/results_viewer/: __init__.py  app.py  baseline_data.py  baseline_tab.py  container_yard_budget_data.py  container_yard_budget_tab.py  cross_swap_data.py  cross_swap_tab.py  event_extractor.py  evidence_parser.py  feature_presence_data.py  feature_presence_tab.py  judge_replay_filter.py  judge_replay_tab.py  measurement_scores.py  message_similarity.py  multi_swap_data.py  multi_swap_tab.py  natural_sort.py  oss_frontier_data.py  oss_frontier_tab.py  probe_question_bank.py  probe_similarity_data.py  probe_similarity_tab.py  protocol_learnability_data.py  protocol_learnability_tab.py  resume_data.py  resume_multi_swap_view.py  resume_tab.py  run_catalog.py  run_link.py  scenario_selector.py  seed_mode_filter.py  series_plot.py  stabilize_overcall_data.py  stabilize_overcall_tab.py  timeline_plot.py  timeline_tab.py  verbosity_data.py  verbosity_tab.py
analysis/run_export/: __init__.py  message_backoff_ngram_scorer.py  message_english_ngram_scorer.py  message_perplexity_scorer.py  message_repetition_sidecar.py  run_context_scan.py  scenario_export_specs.py  spreadsheet_writer.py
analysis/sheets_sync/: README.md  __init__.py  sheets_client.py  sync_to_sheets.py
analysis/spot_the_difference_export/: README.md  build_spot_charts.py  export_spot_the_difference.py
analysis/veyru_run_export/: run_context_scan.py  spreadsheet_writer.py  supersession_lineage.py
docs/: communication-metrics.md  compaction-and-clean-history-cost.md  creating-a-scenario.md  judge-decodability-exploit.md  judge-replay-and-rerun-pipeline.md  learnings.md  local-inference-vllm-mlx.md
experiments/: 2026-05-21_veyru_pressure_interventions.md
experiments/2026-05-21_veyru_pressure_interventions/: README.md  baseline_b250.json  budget_decreased_b250.json  budget_increased_b250.json  launch_budget_250_resume.sh  launch_budget_250_sweep.sh  launch_new_motifs_injected.sh  new_motifs_injected_b250_gpt.json  new_motifs_injected_b250_sonnet.json  new_motifs_injected_gpt.json  new_motifs_injected_sonnet.json  postmortem_kept_on_b250_gpt.json  postmortem_kept_on_b250_sonnet.json  with_noise_b250.json
experiments/2026-05-22_multi_swap_baseline_postmortem_on_sonnet/: README.md  knobs.json  launch.sh
experiments/2026-05-22_multi_swap_baseline_sonnet/: README.md  knobs.json  launch.sh
experiments/2026-05-25_multi_swap_baseline_budget250_sonnet/: README.md  knobs.json  launch.sh
experiments/2026-05-25_multi_swap_baseline_postmortem_on_budget250_sonnet/: README.md  knobs.json  launch.sh
experiments/2026-05-25_no_swap_baseline_pm_always_budget250_sonnet/: README.md  knobs.json
experiments/2026-05-25_no_swap_baseline_pm_always_budget450_sonnet/: README.md  knobs.json
experiments/2026-05-25_no_swap_baseline_pm_phase_a_budget250_sonnet/: README.md  knobs.json
experiments/2026-05-25_no_swap_baseline_pm_phase_a_budget450_sonnet/: README.md  knobs.json
experiments/2026-05-27_multi_swap_baseline_budget250_gpt/: knobs.json
experiments/2026-05-27_multi_swap_baseline_postmortem_on_budget250_gpt/: knobs.json
experiments/2026-05-27_protocol_learnability_budget250/: ANALYSIS_METHOD.md  README.md  analysis_5_baselines_h10_samemodel.md  deploy_llama_and_wait.sh  dump_post_swap_transcript.py  fix_lineage_before_rerun.py  knobs_baseline.json  launch_baselines.sh  launch_baselines_gpt_topup.sh  launch_cross_family.sh  launch_derived.sh  launch_history_sweep.sh  launch_llama.sh  launch_resume_no_postmortem.sh  list_baselines.py  replace_knobs.json  replace_knobs_legacy.json  replace_knobs_llama.json  replace_knobs_llama_legacy.json  rerun_tool_leak_fix.py  resume_knobs_legacy.json
experiments/2026-06-19_veyru_channel_noise/: README.md  audit_noise_runs.py  eval_budget150.sh  launch_noise.sh  postdrain_eval.sh  rerun_perplexity.sh  rolling_eval.sh
experiments/2026-06-25_veyru_random_letter/: README.md  eval_random_letter.sh  knobs_base.json  launch_random_letter.sh
experiments/2026-06-30_drive_module_repair_baseline/: README.md  eval_baseline.sh  knobs_base.json  launch_baseline.sh
frontend/: .env.local.example  .gitignore  .prettierignore  .stylelintrc.json  DockerfileFrontend  eslint.config.mjs  middleware.ts  openapi.json  package-lock.json  package.json  railway.toml  tsconfig.json
linter/: check_inline_imports.py  check_type_checking.py
modal/: README.md  serve_llama.py  serve_qwen.py  serve_qwen_32b.py  smoke_test_llama.py  smoke_test_logprobs.py  smoke_test_qwen.py  smoke_test_qwen_32b.py
scripts/: export_openapi.py  run_communication_pipeline.sh
(+1380 files in other folders)
