[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "schmidt-poc"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.0.0",
    "aiofiles>=24.0.0",
    "orjson>=3.10.0",
    "jinja2>=3.1.0",
    "tenacity>=9.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "black==25.9.0",
    "isort==5.13.2",
    "mypy==1.11.2",
    "pyright>=1.1.407",
    "ruff>=0.14.3",
    "vulture>=2.14",
    "pytest>=8.0.0",
    "types-aiofiles>=25.1.0.20251011",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
explicit_package_bases = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "ARG"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
extraPaths = ["src"]

[tool.vulture]
min_confidence = 80
