[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "schmidt-poc"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.87.0",
    "pydantic>=2.0.0",
    "aiofiles>=24.0.0",
    "orjson>=3.10.0",
    "jinja2>=3.1.0",
    "tenacity>=9.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "mcp>=1.0.0",
    "pydantic-ai>=0.2.0",
    "openai>=2.29.0",
    "datasets>=3.0.0",
    "httpx>=0.28.1",
    "huggingface_hub>=0.25.0",
    "weasyprint>=62.0",
    "markdown>=3.7",
    "python-dotenv>=1.2.2",
    "aiosqlite>=0.22.1",
    "cachetools>=7.0.5",
    "watchdog>=6.0.0",
    "minicons>=0.2.55",
    "torch>=2.2.0",
    "transformers>=5.0.0rc3",
    "matplotlib>=3.10.9",
    "rapidfuzz>=3.10.0",
    "psycopg[binary]>=3.2.0",
    "psycopg-pool>=3.2.0",
    "alembic>=1.13.0",
    "svix>=1.40.0",
    "clerk-backend-api>=3.0.0",
    "streamlit>=1.57.0",
    "plotly>=6.7.0",
    "seaborn>=0.13.2",
    "openpyxl>=3.1.5",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "isort==5.13.2",
    "pyright>=1.1.407",
    "ruff>=0.14.3",
    "vulture>=2.14",
    "pytest>=9.0.3",
    "types-aiofiles>=25.1.0.20251011",
    "types-Markdown>=3.7.0.20250322",
    "types-cachetools>=6.2.0.20260408",
    "types-pyperclip>=1.11.0.20260408",
    "modal>=1.4.2",
    "pandas-stubs>=3.0.0.260204",
]
analysis = [
    "streamlit>=1.40.0",
    "plotly>=5.24.0",
    "pyperclip>=1.9.0",
]
eval = [
    "inspect-ai>=0.3.0",
]

[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "ARG"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
extraPaths = ["src", "."]
ignore = ["vulture_whitelist.py", "runs", "modal", "scripts"]

# analysis/ is exploratory plotting code that talks to untyped libs
# (pandas, plotly, matplotlib, streamlit). Relax the strict-only rules
# that fire on inferred Unknown / missing-stub types there.
[[tool.pyright.executionEnvironments]]
root = "analysis"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportUnknownParameterType = "none"
reportMissingTypeStubs = "none"
reportMissingTypeArgument = "none"
reportMissingParameterType = "none"
reportPrivateUsage = "none"
reportUntypedFunctionDecorator = "none"
reportUntypedClassDecorator = "none"
reportUnusedFunction = "none"

[tool.vulture]
min_confidence = 80
